--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,15 @@ modules:
       LED: LED1
       speaker: speaker1
 
+  module2:
+    valvePin: 17
+    pump: pump1
+    lickPin: 5
+    plugins:
+      LED: LED2
+      speaker: speaker2
+
+
 pumps:
   pump1:
     fillValve: 20
@@ -31,3 +40,9 @@ plugins:
   speaker1:
     type: speaker
     SDPin: 3
+  LED2:
+    type: LED
+    LEDPin: 8
+  speaker2:
+    type: speaker
+    SDPin: 7
