--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,9 @@
 name: reward-module
-channels:
-  - conda-forge
-  - defaults
 dependencies:
   - python=3.
-  - paramiko
+  - socket
+  - pandas
+  - pip
+    - rpimotorlib
+    - RPi.GPIO
+    - pyaudio
