--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 RPi.GPIO
-rpimotorlib
 pyaudio
-pandas
+pandas # we can get rid of this requirement with some modifications
 adafruit-blinka
 adafruit_mcp230xx
