--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
+__pycache__
 .DS_Store
-__pycache__/
+.ipynb_checkpoints
+*.py[cod]
+*$py.class
 *.pyc
-ratBerryPi/data/*
-!ratBerryPi/data/.gitkeep
-ratBerryPi/logs/*
-!ratBerryPi/logs/.gitkeep
-ratBerryPi/pump_states/*
-!ratBerryPi/pump_states/.gitkeep
+
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
