add input checking to avoid pressure build up

--- a/ratBerryPi/interfaces/olfactometer/config.yaml
+++ b/ratBerryPi/interfaces/olfactometer/config.yaml
@@ -3,7 +3,7 @@ dilutant_flow_controller: ""
 inert_flow_controller: ""
 outlet_valve: GPB1
 release_valve: GPB3
-initial_dilution: 0.5
+initial_odor_concentration: 0.5
 initial_flowrate: 1
 odor_valves:
   odor1: GPA1
