debug alicat code with controller plugged in

--- a/ratBerryPi/interfaces/olfactometer/config.yaml
+++ b/ratBerryPi/interfaces/olfactometer/config.yaml
@@ -1,6 +1,6 @@
 odor_flow_controller: ""
 dilutant_flow_controller: ""
-inert_flow_controller: ""
+inert_flow_controller: C
 outlet_valve: GPB1
 release_valve: GPB3
 initial_odor_concentration: 0.5
