--- a/ratBerryPi/config.yaml
+++ b/ratBerryPi/config.yaml
@@ -56,7 +56,7 @@ pumps:
     type: PicoPump
     syringeType: BD30mL
     port: /dev/ttyACM0
-    fillValvePin: "GPA6"
+    fillValvePin: 15
   # pump1:
   #   enPin: "GPA0"
   #   fillValvePin: "GPA6"
